<resources>
    <string name="app_name">SmarTree</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_home">Your Tree</string>
    <string name="drawer_details">Details</string>
    <string name="drawer_store">Store</string>
    <string name="drawer_settings">Settings</string>
    <string name="welcome_title">Do not text while walking!</string>
    <string name="welcome_desc">The seed will grow as you walk\nwithout using your phone.\nLet\'s grow your own tree!</string>
    <string name="welcome_begin">Begin</string>
    <string name="main_score">Total Steps\n%d</string>
    <string name="main_default_quote">Have a nice day…</string>
    <string name="main_hurt_quote">Don\'t do it…</string>
    <string name="main_dead_quote">You…killed me…</string>
    <string name="main_change_quote">Change Quote</string>
    <string name="main_walk_warning">Stop walking!\nTree will die if you walk while watching this app!</string>
    <string name="main_walk_dead">You\'ve killed the tree!\nDo not walk while watching this app!</string>
    <string name="details_score">Tree Points</string>
    <string name="details_steps">Total Steps</string>
    <string name="details_extra">Extra Points</string>
    <string name="details_total_running_time">Total tree time</string>
    <string name="details_total_running_time_format">%d days %dh %dm %ds</string>
    <string name="details_longest_step">Highest number of steps</string>
    <string name="details_killed_trees">Number of trees killed</string>
    <string name="details_no_record">No record</string>
    <string name="store_points">Available Points: %dP</string>
    <string name="store_pricetag" translatable="false">%dP</string>
    <string name="store_item_1">Avocado</string>
    <string name="store_item_2">Carrot</string>
    <string name="store_item_3">Apple</string>
    <string name="store_item_4">Tomato</string>
    <string name="store_item_5">Pumpkin</string>
    <string name="store_not_enough_point">You need more points to purchase this item!</string>
    <string name="settings_placeholder">There is nothing to set for now</string>
    <string name="settings_reset">Reset Everything</string>
    <string name="settings_reset_confirm">This will reset all of your progress!\nAre you sure?</string>
    <string name="app_invalid_access">App is improperly launched.</string>

    <string name="settings_debug_title">Debug Features</string>
    <string name="settings_debug_addtime">Add 1 hour</string>
    <string name="settings_debug_addstep">Add 100 steps</string>
    <string name="settings_debug_addpoint">Add 100 points</string>
    <string name="settings_debug_resetkills">Reset Tree Kill Status</string>

    <string name="service_noti_title">SmarTree</string>
    <string name="service_noti_content">%d steps walked during last screen off</string>
    <string name="service_noti_channel">Step Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
